# FOD-Detection

./: .gitignore  .gitmodules  README.md  package.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/performance/: 10-16-2024.txt  10-20-2024.txt  10-21-2024.txt  10-25-2024.txt  11-1-2024.txt  11-3-2024.txt  11-4-2024.txt
src-tauri/src/: app_backend.rs  args.rs  lib.rs  main.rs  model.rs  multi_capture.rs  ort_backend.rs  unit_tests.rs
src/lib/: CameraDisplay.svelte  ControlPanel.svelte  GridDisplay.svelte  win1.js  win2.js  win3.js  win_store.js
src/routes/: +page.svelte
