[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = ["dialog-all"] }
anyhow = "1.0.87"
clap = { version = "4.0.32", features = ["derive"] }
half = "2.2.1"
ndarray = "0.15.6"
ort = { version = "1.16.3", features = ["load-dynamic"] }
regex = "1.9.6"
rand = "0.8.5"
image = "0.24.9"
chrono = "0.4.31"
rusttype = "0.9.3"
dirs = "5.0.1"
ureq = "2.9.3"
imageproc = "0.23.0"
yaml-rust = "0.4.5"
figment = { version = "0.10.19", features = ["toml"] }
thiserror = "1.0.63"
rbase64 = "2.0.3"
mat2image = {path = "./mat2image"}
rayon = "1.10.0"
opencv = {version = "0.93.1", features = ["clang-runtime"] }
simplelog = "0.12.2"
log = "0.4.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
